2009-03-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Contacts/SOGoContactFolders.m ([SOGoContactFolders
	-appendSystemSources]): modified the return type and returns nil,
	to match the new SOGoParentFolder definition of the method.
	Otherwise, a confusion is created on the stack.

2009-03-23  Ludovic Marcotte <lmarcotte@inverse.ca>

        * SoObjects/SOGo/SOGoUser.m:
	Don't retain/release the language ivar.


2009-03-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser -language]): cache the
	language in an ivar again, that is reset when the user settings or
	defaults have been loaded successfully.
	([SOGoUser -userDefaults]): invoke "fetchProfile" on the defaults
	instance, in order to validate the DB connection.

2009-03-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser
	-initWithLogin:newLoginroles:newRoles]): removed "mailAccounts" ivar.
	([-mailAccounts]): no longer cache the mailAccounts info in an ivar.

2009-03-20  Ludovic Marcotte <lmarcotte@inverse.ca>

        * SoObjects/SOGo/SOGoUserDefaults.{h,m}
	We are now way quicker to react when the database
	is down.

2009-03-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Contacts/UIxContactFoldersView.m ([UIxContactFoldersView
	-allContactSearchAction]): trap @"SOGoDBException" and return nil
	in that case.

	* SoObjects/SOGo/SOGoUserDefaults.m ([SOGoUserDefaults
	-jsonRepresentation]): return "{}" if values is nil (due to a DB
	connection error).

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser -userDefaults]): ensure the
	values are not nil before putting them in the cache. This fixes an
	exception occuring for setting a nil key in a dictionary.
	([SOGoUser -userSettings]): same as above.
	([SOGoUser -userDefaults]): if "value" is null, meaning that
	database connectivity has failed, don't try to set default values,
	which would trigger other connection tries.

2009-03-19  Francis Lachapelle  <flachapelle@inverse.ca>
